banner setup commit

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <body>
     <!-- header section  -->
 <header>
+  <!-- nav section  -->
 <nav class="bg-[#FFE7D3]">
     <div class="flex justify-between lg:flex lg:flex-wrap sora-font   mx-auto lg:px-18 px-7 lg:justify-around items-center">
         <!-- logo & name -->
@@ -80,8 +81,24 @@
         </div>
     </div>
     <div class=" lg:hidden border-b-2 border-black ..."></div>
-
 </nav>
+<!-- banner section  -->
+ <section class=" flex  flex-col lg:flex   lg:flex-col sora-font max-w-screen-xl mx-auto px-7 lg:px-18 lg:my-11 ">
+  <div class="relative top-6 z-10 lg:relative top-20 lg:z-10 lg:mt-8">
+    <h3 class=" lilita-font text-2xl font-medium lg:text-5xl font-medium mb-4">Pamper Your Pet,
+      <br>
+      Because They Deserve
+      <br>
+      the Best
+    </h3>
+    <p class="text-base	 lg:text-xl text-[#3F3F3F] mb-4">
+      Discover a world of treats, toys, and essentials handpicked for <br> your furry friends. Shop now and make tails wag with joy!</p>
+    <button class="btn btn-warning">Find a pet</button>
+  </div>
+  <div class="relative bottom-24 lg:relative lg:bottom-80 lg:flex items-center justify-center bg-cover bg-center ">
+    <img class="lg:w-full " src="c1-assets/cat-big.png" alt="">
+  </div>
+ </section>
 </header>
 </body>
-</html>
+</html<>
