browse cetagory  setup commit

--- a/index.html
+++ b/index.html
@@ -100,5 +100,50 @@
   </div>
  </section>
 </header>
+<!-- main section  -->
+<main>
+  <!-- cetegroies section   -->
+   <section class="sora-font max-w-screen-xl mx-auto px-7 lg:px-18 lg:mt-2 mb-10 ">
+    <h3 class="lilita-font text-xl lg:text-3xl font-medium mb-4">Browse By Categories</h3>
+    <div class="grid grid-cols-2 lg:grid lg:grid-cols-6	 justify-between gap-4">
+
+      <div class="bg-[#F9DF8A] rounded-xl px-12 py-14 items-center justify-center">
+      <img class=" bg-white rounded-full p-6 mb-3" src="c1-assets/dog-cartoon.png" alt="">
+        <h4 class="text-xl lilita-font font-medium text-center">Dogs</h4>
+        <p class="text-sm font-medium text-center">3 items</p>
+      </div>
+
+      <div class="bg-[#F9DF8A] rounded-xl px-12 py-14 items-center">
+        <img class=" bg-white rounded-full p-6 mb-3" src="c1-assets/bird-cartoon.png" alt="">
+          <h4 class="text-xl lilita-font font-medium text-center" >Bird</h4>
+          <p  class="text-sm font-medium text-center">3 items</p>
+        </div>
+
+        <div class="bg-[#F9DF8A] rounded-xl px-12 py-14 items-center ">
+          <img class=" bg-white rounded-full p-6 mb-3" src="c1-assets/fish-cartoon.png" alt="">
+            <h4 class="text-xl lilita-font font-medium text-center">Fish</h4>
+            <p  class="text-sm font-medium text-center">3 items</p>
+          </div>
+
+          <div class="bg-[#F9DF8A] rounded-xl px-12 py-14 items-center">
+            <img class=" bg-white rounded-full p-6 mb-3" src="c1-assets/mouse-cartoon.png" alt="">
+              <h4 class="text-xl lilita-font font-medium text-center">Mouse</h4>
+              <p  class="text-sm font-medium text-center">3 items</p>
+          </div>
+
+          <div class="bg-[#F9DF8A] rounded-xl px-12 py-14 items-center ">
+            <img class=" bg-white rounded-full p-6 mb-3" src="c1-assets/rabbit-cartoon.png" alt="">
+              <h4 class="text-xl lilita-font font-medium text-center">Rabbit</h4>
+              <p class="text-sm font-medium text-center">3 items</p>
+            </div>
+
+            <div class="bg-[#F9DF8A] rounded-xl px-12 py-14 items-center ">
+              <img class=" bg-white rounded-full p-6 mb-3" src="c1-assets/cat-cartoon.png" alt="">
+                <h4 class="text-xl lilita-font font-medium text-center">Cat</h4>
+                <p  class="text-sm font-medium text-center">3 items</p>
+            </div>
+    </div>
+   </section>
+</main>
 </body>
 </html<>
