card  cetagory  setup commit

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <button class="btn btn-warning">Find a pet</button>
   </div>
   <div class="relative bottom-24 lg:relative lg:bottom-80 lg:flex items-center justify-center bg-cover bg-center ">
-    <img class="lg:w-full " src="c1-assets/cat-big.png" alt="">
+    <img class="lg:w-full" src="c1-assets/cat-big.png" alt="">
   </div>
  </section>
 </header>
@@ -144,6 +144,161 @@
             </div>
     </div>
    </section>
+   <!-- trending section  -->
+    <section class="bg-[#FFF9F4] lg:mt-20 lg:mb-20 mt-20 mb20">
+
+<div class="sora-font max-w-screen-xl mx-auto px-7 lg:px-18 lg:mt-8 mb-10 items-center">
+    <!-- <div class="mt-6 mb-10 lg:mt-32 items-center"> -->
+      <h1 class="text-xl font-medium lilita-font py-14 lg:text-3xl font-medium">Trending Pet Products</h1>
+    <!-- </div> -->
+      <!-- card conainer  -->
+   <!-- <div class="grid grid-cols-1 lg:grid lg:grid-cols-2 lg:gap-4          justify-between"> -->
+    <div class="flex flex-wrap  lg:flex lg:flex-wrap lg:flex-cols-2  justify-between ">
+      <!-- big card -->
+     <div class="bg-[#F9DF8A] rounded-xl mb-10 px-12 py-3 lg:my-6">
+      <h2 class="text-xl lilita-font font-medium mt-6 mb-2 lg:text-2xl font-medium lg:mt-4 lg:mb-4 "> T-shirt For Dogs</h2>
+      <p class="text-sm font meium lg:text-base font-medium mt-6 mb-4">Discover a world of treats toys and 
+        <br> 
+        essentials ha8ndpicks for</p>
+      <button class="px-7 py-3 text-base font-semibold bg-white rounded-xl">shop Now</button>
+      <div class="relative bottom-32 left-24">
+        <img class="" src="c1-assets/cute-pet-small.png" alt="">
+      </div>
+     </div>
+
+     <!-- mini card -->
+    <div class="grid grid-cols-2 gap-10 lg:gap-4 lg:grid lg:grid-cols-3 lg:my-6 ">
+            <!-- card -->
+            <div class=" flex flex-wrap gap-2 bg-white rounded-xl m-t-3 m-r-32 m-b-3 m-l-4 items-center">
+            <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4 " src="c1-assets/pet-couch.png" alt="">
+           <div class="">
+          <!-- star &rating -->
+          <div class="flex flex-wrap gap-2">
+            <i class="fa-solid fa-star text-[#FFC107]"></i>
+            <h3 class="text-sm font-medium lilita-font">5.3</h3>
+          </div>
+          <h2 class="text-base ">Pet bed</h2>
+          <h5 class="text-sm ">$32.25</h5>
+        </div>
+            </div>
+
+            <!-- card -->
+            <div class=" flex flex-wrap gap-2 bg-white rounded-xl m-t-3 m-r-32 m-b-3 m-l-4 items-center">
+              <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4" src="c1-assets/fish-cartoon.png" alt="">
+              <div>
+                <!-- star &rating -->
+                <div class="flex flex-wrap gap-2">
+                  <i class="fa-solid fa-star text-[#FFC107]"></i>
+                  <h3 class="text-sm font-medium lilita-font">4.3</h3>
+                </div>
+                <h2 class="text-base ">Fish oxy</h2>
+                <h5 class="text-sm ">$22.25</h5>
+              </div>
+            </div>
+
+            <!-- card -->
+            <div class=" flex flex-wrap  bg-white rounded-xl m-t-3 m-r-32 m-b-3 m-l-4 items-center">
+              <img  class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4" src="c1-assets/mouse-cartoon.png" alt="">
+              <div>
+                <!-- star &rating -->
+                <div class="flex flex-wrap gap-2">
+                  <i class="fa-solid fa-star text-[#FFC107]"></i>
+                  <h3 class="text-sm font-medium lilita-font">3.3</h3>
+                </div>
+                <h2 class="text-base ">Mouse asolt</h2>
+                <h5 class="text-sm ">$22.25</h5>
+              </div>
+            </div>
+
+           <!-- card -->
+            <div class=" flex flex-wrap gap-2  bg-white rounded-xl m-t-3 m-r-32 m-b-3 m-l-4 items-center">
+              <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4" src="c1-assets/bird-cartoon.png" alt="">
+           <div>
+          <!-- star &rating -->
+          <div class="flex flex-wrap gap-2">
+            <i class="fa-solid fa-star text-[#FFC107]"></i>
+            <h3 class="text-sm font-medium lilita-font">3.9</h3>
+          </div>
+          <h2 class="text-base ">Bird chesk</h2>
+          <h5 class="text-sm ">$10.25</h5>
+        </div>
+            </div>
+
+            <!-- card -->
+            <div class=" flex flex-wrap gap-2 bg-white rounded-xl m-t-3 m-r-32 m-b-3 m-l-4 items-center">
+              <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4" src="c1-assets/cat-cartoon.png" alt="">
+              <div>
+                <!-- star &rating -->
+                <div class="flex flex-wrap gap-2">
+                  <i class="fa-solid fa-star text-[#FFC107]"></i>
+                  <h3 class="text-sm font-medium lilita-font">3.2</h3>
+                </div>
+                <h2 class="text-base ">cat Hudi</h2>
+                <h5 class="text-sm ">$20.25</h5>
+              </div>
+            </div>
+
+             <!-- card -->
+            <div class=" flex flex-wrap gap-2 bg-white rounded-xl m-t-3 m-r-32 m-b-3 m-l-4 items-center">
+         <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4" src="c1-assets/rabbit-cartoon.png" alt="">
+        <div>
+          <!-- star &rating -->
+          <div class="flex flex-wrap gap-2">
+            <i class="fa-solid fa-star text-[#FFC107]"></i>
+            <h3 class="text-sm font-medium lilita-font">3.9</h3>
+          </div>
+          <h2 class="text-base ">Rabbit solt</h2>
+          <h5 class="text-sm ">$12.25</h5>
+        </div>
+            </div>
+
+            <!-- card -->
+            <div class=" flex flex-wrap gap-2 bg-white rounded-xl m-t-3 m-r-32 m-b-3 m-l-4 items-center">
+              <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4"src="c1-assets/dog-cartoon.png" alt="">
+              <div>
+                <!-- star &rating -->
+                <div class="flex flex-wrap gap-2">
+                  <i class="fa-solid fa-star text-[#FFC107]"></i>
+                  <h3 class="text-sm font-medium lilita-font">4.2</h3>
+                </div>
+                <h2 class="text-base ">Dog jet</h2>
+                <h5 class="text-sm ">$18.25</h5>
+              </div>
+            </div>
+
+            <!-- card -->
+            <div class=" flex flex-wrap gap-2 bg-white rounded-xl m-t-3 m-r-32 m-b-3 m-l-4 items-center">
+                <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4"src="c1-assets/pet-couch.png" alt="">
+            <div>
+            <!-- star &rating -->
+            <div class="flex flex-wrap gap-2">
+              <i class="fa-solid fa-star text-[#FFC107]"></i>
+              <h3 class="text-sm font-medium lilita-font">4.9</h3>
+            </div>
+            <h2 class="text-base ">Dog soft</h2>
+            <h5 class="text-sm ">$35.25</h5>
+            </div>
+            </div>
+
+            <!-- card -->
+            <div class=" flex flex-wrap lg:flex lg:flex-wrap gap-2 bg-white rounded-xl m-t-3 m-r-32 m-b-3 m-l-4 items-center hidden lg:inline-block  ">
+              <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4 "src="c1-assets/fish-cartoon.png" alt="">
+              <div>
+                <!-- star &rating -->
+                <div class="flex flex-wrap gap-2">
+                  <i class="fa-solid fa-star text-[#FFC107]"></i>
+                  <h3 class="text-sm font-medium lilita-font">2.9</h3>
+                </div>
+                <h2 class="text-base ">Fish gems</h2>
+                <h5 class="text-sm ">$16.25</h5>
+              </div>
+            </div>
+
+    </div>
+   </div>
+    
+</div>
+</section>
 </main>
 </body>
 </html<>
