tremding  cetagory  setup commit

--- a/index.html
+++ b/index.html
@@ -151,146 +151,145 @@
     <!-- <div class="mt-6 mb-10 lg:mt-32 items-center"> -->
       <h1 class="text-xl font-medium lilita-font py-14 lg:text-3xl font-medium">Trending Pet Products</h1>
     <!-- </div> -->
-      <!-- card conainer  -->
-   <!-- <div class="grid grid-cols-1 lg:grid lg:grid-cols-2 lg:gap-4          justify-between"> -->
-    <div class="flex flex-wrap  lg:flex lg:flex-wrap lg:flex-cols-2  justify-between ">
-      <!-- big card -->
-     <div class="bg-[#F9DF8A] rounded-xl mb-10 px-12 py-3 lg:my-6">
-      <h2 class="text-xl lilita-font font-medium mt-6 mb-2 lg:text-2xl font-medium lg:mt-4 lg:mb-4 "> T-shirt For Dogs</h2>
-      <p class="text-sm font meium lg:text-base font-medium mt-6 mb-4">Discover a world of treats toys and 
+      <!-- card container  -->
+   <div class="grid grid-cols-1 lg:grid lg:grid-cols-2  gap-2  mt-6 mb-4 justify-between">
+    <!-- big card -->
+     <div class="bg-[#F9DF8A] rounded-xl  mb-6 w-3/4			 lg:w-4/5		 ">
+      <h2 class="text-xl lilita-font font-medium mt-6 mb-2 lg:text-2xl font-medium lg:mt-20 lg:mx-4 mt-20 mx-4"> T-shirt For Dogs</h2>
+      <p class="text-sm font meium lg:text-base font-medium my-2 mx-4">Discover a world of treats toys and 
         <br> 
-        essentials ha8ndpicks for</p>
-      <button class="px-7 py-3 text-base font-semibold bg-white rounded-xl">shop Now</button>
-      <div class="relative bottom-32 left-24">
-        <img class="" src="c1-assets/cute-pet-small.png" alt="">
+        essentials handpicks for</p>
+      <button class="px-5 py-2 text-base font-semibold bg-white rounded-xl lg:my-2 mx-4">shop Now</button>
+      <div class="relative lg:bottom-28 lg:left-32 bottom-28 left-28">
+        <img class="w-40 lg:w-48" src="c1-assets/cute-pet-small.png" alt="">
       </div>
      </div>
 
      <!-- mini card -->
-    <div class="grid grid-cols-2 gap-10 lg:gap-4 lg:grid lg:grid-cols-3 lg:my-6 ">
+    <div class=" grid grid-cols-2 lg:grid lg:grid-cols-3 gap-2 ">
             <!-- card -->
-            <div class=" flex flex-wrap gap-2 bg-white rounded-xl m-t-3 m-r-32 m-b-3 m-l-4 items-center">
-            <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4 " src="c1-assets/pet-couch.png" alt="">
+            <div class=" flex flex-wrap gap-2 bg-white rounded-xl items-center lg:w-48 lg:px-18 lg:py-3 mb-3">
+            <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4 w-12 h-12" src="c1-assets/pet-couch.png" alt="">
            <div class="">
           <!-- star &rating -->
           <div class="flex flex-wrap gap-2">
             <i class="fa-solid fa-star text-[#FFC107]"></i>
-            <h3 class="text-sm font-medium lilita-font">5.3</h3>
+            <h3 class="text-xs font-medium lilita-font">5.3</h3>
           </div>
-          <h2 class="text-base ">Pet bed</h2>
-          <h5 class="text-sm ">$32.25</h5>
+          <h2 class="text-sm ">Pet bed</h2>
+          <h5 class="text-xs ">$32.25</h5>
         </div>
             </div>
 
             <!-- card -->
-            <div class=" flex flex-wrap gap-2 bg-white rounded-xl m-t-3 m-r-32 m-b-3 m-l-4 items-center">
-              <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4" src="c1-assets/fish-cartoon.png" alt="">
+            <div class=" flex flex-wrap gap-2 bg-white rounded-xl items-center lg:w-48 lg:px-18 lg:py-3 mb-3">
+              <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4 w-12 h-12" src="c1-assets/fish-cartoon.png" alt="">
               <div>
                 <!-- star &rating -->
                 <div class="flex flex-wrap gap-2">
                   <i class="fa-solid fa-star text-[#FFC107]"></i>
-                  <h3 class="text-sm font-medium lilita-font">4.3</h3>
+                  <h3 class="text-xs font-medium lilita-font">4.3</h3>
                 </div>
-                <h2 class="text-base ">Fish oxy</h2>
-                <h5 class="text-sm ">$22.25</h5>
+                <h2 class="text-sm">Fish oxy</h2>
+                <h5 class="text-xs ">$22.25</h5>
               </div>
             </div>
 
             <!-- card -->
-            <div class=" flex flex-wrap  bg-white rounded-xl m-t-3 m-r-32 m-b-3 m-l-4 items-center">
-              <img  class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4" src="c1-assets/mouse-cartoon.png" alt="">
+            <div class=" flex flex-wrap gap-2 bg-white rounded-xl items-center lg:w-48 lg:px-18 lg:py-3 mb-3">
+              <img  class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4 w-12 h-12" src="c1-assets/mouse-cartoon.png" alt="">
               <div>
                 <!-- star &rating -->
                 <div class="flex flex-wrap gap-2">
                   <i class="fa-solid fa-star text-[#FFC107]"></i>
-                  <h3 class="text-sm font-medium lilita-font">3.3</h3>
+                  <h3 class="text-xs font-medium lilita-font">3.3</h3>
                 </div>
-                <h2 class="text-base ">Mouse asolt</h2>
-                <h5 class="text-sm ">$22.25</h5>
+                <h2 class="text-sm ">Mouse asolt</h2>
+                <h5 class="text-xs ">$22.25</h5>
               </div>
             </div>
 
            <!-- card -->
-            <div class=" flex flex-wrap gap-2  bg-white rounded-xl m-t-3 m-r-32 m-b-3 m-l-4 items-center">
-              <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4" src="c1-assets/bird-cartoon.png" alt="">
+           <div class=" flex flex-wrap gap-2 bg-white rounded-xl items-center lg:w-48 lg:px-18 lg:py-3 mb-3">
+            <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4 w-12 h-12" src="c1-assets/bird-cartoon.png" alt="">
            <div>
           <!-- star &rating -->
           <div class="flex flex-wrap gap-2">
             <i class="fa-solid fa-star text-[#FFC107]"></i>
-            <h3 class="text-sm font-medium lilita-font">3.9</h3>
+            <h3 class="text-xs font-medium lilita-font">3.9</h3>
           </div>
-          <h2 class="text-base ">Bird chesk</h2>
-          <h5 class="text-sm ">$10.25</h5>
+          <h2 class="text-sm ">Bird chesk</h2>
+          <h5 class="text-xs ">$10.25</h5>
         </div>
             </div>
 
             <!-- card -->
-            <div class=" flex flex-wrap gap-2 bg-white rounded-xl m-t-3 m-r-32 m-b-3 m-l-4 items-center">
-              <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4" src="c1-assets/cat-cartoon.png" alt="">
+            <div class=" flex flex-wrap gap-2 bg-white rounded-xl items-center lg:w-48 lg:px-18 lg:py-3 mb-3">
+              <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4 w-12 h-12" src="c1-assets/cat-cartoon.png" alt="">
               <div>
                 <!-- star &rating -->
                 <div class="flex flex-wrap gap-2">
                   <i class="fa-solid fa-star text-[#FFC107]"></i>
-                  <h3 class="text-sm font-medium lilita-font">3.2</h3>
+                  <h3 class="text-xs font-medium lilita-font">3.2</h3>
                 </div>
-                <h2 class="text-base ">cat Hudi</h2>
-                <h5 class="text-sm ">$20.25</h5>
+                <h2 class="text-sm ">cat Hudi</h2>
+                <h5 class="text-xs ">$20.25</h5>
               </div>
             </div>
 
              <!-- card -->
-            <div class=" flex flex-wrap gap-2 bg-white rounded-xl m-t-3 m-r-32 m-b-3 m-l-4 items-center">
-         <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4" src="c1-assets/rabbit-cartoon.png" alt="">
+             <div class=" flex flex-wrap gap-2 bg-white rounded-xl items-center lg:w-48 lg:px-18 lg:py-3">
+              <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4 w-12 h-12" src="c1-assets/rabbit-cartoon.png" alt="">
         <div>
           <!-- star &rating -->
           <div class="flex flex-wrap gap-2">
             <i class="fa-solid fa-star text-[#FFC107]"></i>
-            <h3 class="text-sm font-medium lilita-font">3.9</h3>
+            <h3 class="text-xs font-medium lilita-font">3.9</h3>
           </div>
-          <h2 class="text-base ">Rabbit solt</h2>
-          <h5 class="text-sm ">$12.25</h5>
+          <h2 class="text-sm ">Rabbit solt</h2>
+          <h5 class="text-xs ">$12.25</h5>
         </div>
             </div>
 
             <!-- card -->
-            <div class=" flex flex-wrap gap-2 bg-white rounded-xl m-t-3 m-r-32 m-b-3 m-l-4 items-center">
-              <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4"src="c1-assets/dog-cartoon.png" alt="">
+            <div class=" flex flex-wrap gap-2 bg-white rounded-xl items-center lg:w-48 lg:px-18 lg:py-3 mb-3">
+              <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4 w-12 h-12"src="c1-assets/dog-cartoon.png" alt="">
               <div>
                 <!-- star &rating -->
                 <div class="flex flex-wrap gap-2">
                   <i class="fa-solid fa-star text-[#FFC107]"></i>
-                  <h3 class="text-sm font-medium lilita-font">4.2</h3>
+                  <h3 class="text-xs font-medium lilita-font">4.2</h3>
                 </div>
-                <h2 class="text-base ">Dog jet</h2>
-                <h5 class="text-sm ">$18.25</h5>
+                <h2 class="text-sm ">Dog jet</h2>
+                <h5 class="text-xs ">$18.25</h5>
               </div>
             </div>
 
             <!-- card -->
-            <div class=" flex flex-wrap gap-2 bg-white rounded-xl m-t-3 m-r-32 m-b-3 m-l-4 items-center">
-                <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4"src="c1-assets/pet-couch.png" alt="">
+            <div class=" flex flex-wrap gap-2 bg-white rounded-xl items-center lg:w-48 lg:px-18 lg:py-3 mb-3">
+              <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4 w-12 h-12"src="c1-assets/pet-couch.png" alt="">
             <div>
             <!-- star &rating -->
             <div class="flex flex-wrap gap-2">
               <i class="fa-solid fa-star text-[#FFC107]"></i>
-              <h3 class="text-sm font-medium lilita-font">4.9</h3>
+              <h3 class="text-xs font-medium lilita-font">4.9</h3>
             </div>
-            <h2 class="text-base ">Dog soft</h2>
-            <h5 class="text-sm ">$35.25</h5>
+            <h2 class="text-sm ">Dog soft</h2>
+            <h5 class="text-xs ">$35.25</h5>
             </div>
             </div>
 
             <!-- card -->
-            <div class=" flex flex-wrap lg:flex lg:flex-wrap gap-2 bg-white rounded-xl m-t-3 m-r-32 m-b-3 m-l-4 items-center hidden lg:inline-block  ">
-              <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4 "src="c1-assets/fish-cartoon.png" alt="">
+            <div class=" flex flex-wrap lg:flex lg:flex-wrap gap-2 bg-white rounded-xl items-center lg:w-48 lg:px-18 lg:py-3 mb-3 hidden lg:inline-block">
+              <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4 w-12 h-12"src="c1-assets/fish-cartoon.png" alt="">
               <div>
                 <!-- star &rating -->
                 <div class="flex flex-wrap gap-2">
                   <i class="fa-solid fa-star text-[#FFC107]"></i>
-                  <h3 class="text-sm font-medium lilita-font">2.9</h3>
+                  <h3 class="text-xs font-medium lilita-font">2.9</h3>
                 </div>
-                <h2 class="text-base ">Fish gems</h2>
-                <h5 class="text-sm ">$16.25</h5>
+                <h2 class="text-sm ">Fish gems</h2>
+                <h5 class="text-xs ">$16.25</h5>
               </div>
             </div>
 
