tremding 2nd final  cetagory  setup commit

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <!-- main section  -->
 <main>
   <!-- cetegroies section   -->
-   <section class="sora-font max-w-screen-xl mx-auto px-7 lg:px-18 lg:mt-2 mb-10 ">
+     <section class="sora-font max-w-screen-xl mx-auto px-7 lg:px-18 lg:mt-2 mb-10 ">
     <h3 class="lilita-font text-xl lg:text-3xl font-medium mb-4">Browse By Categories</h3>
     <div class="grid grid-cols-2 lg:grid lg:grid-cols-6	 justify-between gap-4">
 
@@ -143,30 +143,28 @@
                 <p  class="text-sm font-medium text-center">3 items</p>
             </div>
     </div>
-   </section>
-   <!-- trending section  -->
+     </section>
+  <!-- trending section  -->
     <section class="bg-[#FFF9F4] lg:mt-20 lg:mb-20 mt-20 mb20">
 
-<div class="sora-font max-w-screen-xl mx-auto px-7 lg:px-18 lg:mt-8 mb-10 items-center">
+  <div class="sora-font max-w-screen-xl mx-auto px-7 lg:px-18 lg:mt-8 mb-10">
     <!-- <div class="mt-6 mb-10 lg:mt-32 items-center"> -->
       <h1 class="text-xl font-medium lilita-font py-14 lg:text-3xl font-medium">Trending Pet Products</h1>
     <!-- </div> -->
       <!-- card container  -->
    <div class="grid grid-cols-1 lg:grid lg:grid-cols-2  gap-2  mt-6 mb-4 justify-between">
     <!-- big card -->
-     <div class="bg-[#F9DF8A] rounded-xl  mb-6 w-3/4			 lg:w-4/5		 ">
-      <h2 class="text-xl lilita-font font-medium mt-6 mb-2 lg:text-2xl font-medium lg:mt-20 lg:mx-4 mt-20 mx-4"> T-shirt For Dogs</h2>
-      <p class="text-sm font meium lg:text-base font-medium my-2 mx-4">Discover a world of treats toys and 
-        <br> 
-        essentials handpicks for</p>
-      <button class="px-5 py-2 text-base font-semibold bg-white rounded-xl lg:my-2 mx-4">shop Now</button>
-      <div class="relative lg:bottom-28 lg:left-32 bottom-28 left-28">
-        <img class="w-40 lg:w-48" src="c1-assets/cute-pet-small.png" alt="">
+     <div class="bg-[#F9DF8A] rounded-xl  mb-6 w-80	  lg:w-4/5  ">
+      <h2 class="text-xl lilita-font font-medium mt-12 mb-2 lg:text-2xl font-medium lg:mt-20 lg:mx-4 mt-20 mx-4"> T-shirt For Dogs</h2>
+      <p class="text-sm font meium lg:text-base font-medium my-4 mx-4">Discover a world of treats toys and <br> essentials handpicks for</p>
+      <button class=" px-5 py-2 text-base font-semibold bg-white rounded-xl lg:my-2 mx-4">shop Now</button>
+      <div class="relative lg:bottom-28 lg:left-32 bottom-20 left-16	">
+        <img class="w-48 lg:w-48 mx-auto overflow-hidden" src="c1-assets/cute-pet-small.png" alt="">
       </div>
      </div>
 
      <!-- mini card -->
-    <div class=" grid grid-cols-2 lg:grid lg:grid-cols-3 gap-2 ">
+    <div class=" grid grid-cols-2 lg:grid lg:grid-cols-3 gap-2  ">
             <!-- card -->
             <div class=" flex flex-wrap gap-2 bg-white rounded-xl items-center lg:w-48 lg:px-18 lg:py-3 mb-3">
             <img class="bg-[#FFF9F4] rounded-3xl p-2 lg:mx-4 w-12 h-12" src="c1-assets/pet-couch.png" alt="">
@@ -298,6 +296,10 @@
     
 </div>
 </section>
+  <!-- low price section  -->
+   <section>
+
+   </section>
 </main>
 </body>
 </html<>
