low price dekstop   cetagory  setup commit

--- a/index.html
+++ b/index.html
@@ -296,9 +296,32 @@
     
 </div>
 </section>
-  <!-- low price section  -->
-   <section>
-
+<!-- low price section  -->
+   <section class="sora-font max-w-screen-xl mx-auto px-7 lg:px-18 lg:my-11 my-11">
+    <h3 class="lilita-font text-xl font-medium lg:text-3xl
+       lg:font-medium ">Everyday low Price</h3>
+     <!-- card container  -->
+        <div class=" flex flex-cols lg:flex lg:flex-cols-2 gap-2 justify-around mt-8">
+        <!-- big card -->
+       <div class="grid grid-cols-2 bg-gradient-to-r from-purple-200 to-blue-200 rounded-xl">
+         <div class="mx-4 lg:mx-12 flex-grow mt-24 ">
+           <p class="hidden lg:inline-block lg:text-sm text-gray-600 
+           mb-1 ">Under Price</p>
+           <h4 class="text-xl font-semibold mt-2">Pet Grooming Mitt</h4>
+            <p class="hidden lg:inline-block lg:text-sm text-gray-500 mt-2 mb-2">(Easy Hair Removal)</p>
+           <p class="text-2xl font-bold mt-2">$7.99</p>
+         </div>
+         <img class=" rounded-lg " src="c1-assets/cute-dog-mid.png" alt="">
+    </div>
+       <!-- small card  -->
+          <div class=" grid grid-cols-2 bg-gradient-to-r from-purple-200 to-orange-200 rounded-xl">
+            <div class="mx-4 mt-6">
+            <h4 class=" text-xl lg:text-2xl font-semibold mt-2">T-Shirt for Dogs</h4>
+            <p class="text-2xl font-bold mt-2 text-blue-800">$5.99</p>
+            </div>
+            <img  class=" relative top-10 right-10 rounded-lg " src="c1-assets/cute-pet-mid.png" alt="">
+          </div>
+        </div>
    </section>
 </main>
 </body>
