--- a/index.html
+++ b/index.html
@@ -301,10 +301,10 @@
     <h3 class="lilita-font text-xl font-medium lg:text-3xl
        lg:font-medium ">Everyday low Price</h3>
      <!-- card container  -->
-        <div class=" flex flex-cols lg:flex lg:flex-cols-2 gap-2 justify-around mt-8">
+  <div class=" lg:flex lg:flex-cols-2 gap-4 justify-around mt-8">
         <!-- big card -->
-       <div class="grid grid-cols-2 bg-gradient-to-r from-purple-200 to-blue-200 rounded-xl">
-         <div class="mx-4 lg:mx-12 flex-grow mt-24 ">
+       <div class="lg:grid lg:grid-cols-2 bg-gradient-to-r from-purple-200 to-blue-200 rounded-xl mb-6 ">
+         <div class="mx-4 lg:mx-12 flex-grow lg:mt-24 mt-8 ">
            <p class="hidden lg:inline-block lg:text-sm text-gray-600 
            mb-1 ">Under Price</p>
            <h4 class="text-xl font-semibold mt-2">Pet Grooming Mitt</h4>
@@ -314,15 +314,33 @@
          <img class=" rounded-lg " src="c1-assets/cute-dog-mid.png" alt="">
     </div>
        <!-- small card  -->
-          <div class=" grid grid-cols-2 bg-gradient-to-r from-purple-200 to-orange-200 rounded-xl">
+          <div class=" grid grid-cols-2 bg-gradient-to-r from-purple-200 to-orange-200 rounded-xl mb-6">
             <div class="mx-4 mt-6">
             <h4 class=" text-xl lg:text-2xl font-semibold mt-2">T-Shirt for Dogs</h4>
             <p class="text-2xl font-bold mt-2 text-blue-800">$5.99</p>
             </div>
-            <img  class=" relative top-10 right-10 rounded-lg " src="c1-assets/cute-pet-mid.png" alt="">
+            <img  class=" relative top-2 right-10 lg:top-10 lg:right-10 rounded-lg " src="c1-assets/cute-pet-mid.png" alt="">
           </div>
-        </div>
+  </div>   
    </section>
+   <!-- get news section  -->
+<section class=" sora-font max-w-screen-xl mx-auto px-7 lg:px-18 my-10 ">
+  <div class="bg-[#FFF9F4] rounded-xl grid grid-cols-1 lg:grid lg:grid-cols-2 gap-2 ">
+      <!--  img container -->
+       <div class="w-full px-5 lg:px-10 py-10 ">
+        <img src="c1-assets/cute-pet-mid.png" alt="">
+       </div>
+       <!-- context container  -->
+      <div class="mt-20 mx-2  ">
+        <h4 class="text-xl lilita-font font-medium mb-4">Get Pawsome News!</h4>
+        <p class="text-sm font-medium text-gray-500 mb-4">Exclusive training tips, ticks, product deals and more.</p>
+
+        <input class=" bg-white rounded-lg lg:px-18 py-4 mb-4" placeholder="Your email" type="email" name="" id="">
+        <br>
+        <button class=" bg-yellow-500 py-2 px-10 rounded-xl">Subscribe</button>
+      </div>
+  </div>   
+</section>
 </main>
 </body>
 </html<>
