--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <!-- main section  -->
 <main>
   <!-- cetegroies section   -->
-     <section class="sora-font max-w-screen-xl mx-auto px-7 lg:px-18 lg:mt-2 mb-10 ">
+<section class="sora-font max-w-screen-xl  mx-auto px-7 lg:px-18 lg:mt-2 mb-10 ">
     <h3 class="lilita-font text-xl lg:text-3xl font-medium mb-4">Browse By Categories</h3>
     <div class="grid grid-cols-2 lg:grid lg:grid-cols-6	 justify-between gap-4">
 
@@ -145,7 +145,7 @@
     </div>
      </section>
   <!-- trending section  -->
-    <section class="bg-[#FFF9F4] lg:mt-20 lg:mb-20 mt-20 mb20">
+<section class="bg-[#FFF9F4] lg:mt-20 lg:mb-20 mt-20 mb20">
 
   <div class="sora-font max-w-screen-xl mx-auto px-7 lg:px-18 lg:mt-8 mb-10">
     <!-- <div class="mt-6 mb-10 lg:mt-32 items-center"> -->
@@ -324,8 +324,8 @@
   </div>   
    </section>
    <!-- get news section  -->
-<section class=" sora-font max-w-screen-xl mx-auto px-7 lg:px-18 my-10 ">
-  <div class="bg-[#FFF9F4] rounded-xl grid grid-cols-1 lg:grid lg:grid-cols-2 gap-2 ">
+<section class=" sora-font max-w-screen-xl  mx-auto px-7 lg:px-18 my-10 ">
+  <div class="bg-[#FFF9F4] rounded-xl grid grid-cols-1 lg:grid lg:grid-cols-2 gap-2  relative lg:-bottom-64">
       <!--  img container -->
        <div class="w-full px-5 lg:px-10 py-10 ">
         <img src="c1-assets/cute-pet-mid.png" alt="">
@@ -341,6 +341,47 @@
       </div>
   </div>   
 </section>
+<footer class="bg-[#FFDC26]">
+  <div  class=" sora-font max-w-screen-xl  mx-auto px-7 lg:px-18 mt-10  ">
+    <!-- container  -->
+     <div class=" lg:flex lg:flex-cols-3 gap-4 justify-between items-center gap-4 mx-auto ">
+      <!-- context  -->
+       <div class=" ">
+        <div class="  lg:mt-56 lg:mb-10 ">
+          <div class="flex items-center  ">
+            <div class="flex items-center gap-2">
+            <img class="w-12 h-12" src="c1-assets/logo-footer.png" alt="">
+            <div>
+            <h3 class="hidden lg:inline-block lg:text-2xl font-semibold lg:my-5"> Browse Pet <span class="text-amber-500">&</span> vet</h3>
+            </div>
+            </div>
+          </div>
+          <p class="text-xs">Discover a world of treats, toys, and <br> essentials handpicked for <br> your furry friends</p>
+        </div>
+       </div> 
+      <!-- item container  -->
+        <div class="justify-center gap-4 lg:mt-56 lg:mb-6 ">
+          <ul class=" ">
+            <li class="mb-6"> Home</li>
+            <li class="mb-6">Breeds</li>
+            <li>Contact us</li>
+          </ul>
+         </div>
+      <!-- icon container -->
+       <div class="lg:mt-80 lg:mb-10">
+        <h4 class="tex-sm font-semibold mb-2  ">Follow Us</h4>
+        <div>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-square-instagram"></i>
+        </div>
+       </div>
+    </div>
+  </div>
+</footer>
 </main>
 </body>
-</html<>
+</html>    
+  
+
+    
